misc ui clean up on dashboard - changed heading to black, fixed alignment issue

--- a/src/main/theme/less/panels.less
+++ b/src/main/theme/less/panels.less
@@ -35,7 +35,6 @@
   margin-top: 0;
   margin-bottom: 0;
   font-size: ceil((@font-size-base * 1.325));
-  color: @brand-primary;
   font-family: "Oxygen",sans-serif;
 
   > a {
