--- a/src/main/theme/less/theme.less
+++ b/src/main/theme/less/theme.less
@@ -227,6 +227,9 @@ div[role=main]{
 	overflow-y: auto;
 }
 
+.dashboard-height{
+	height: 56px;
+}
 //
 // Package Management
 // --------------------------------------------------
